--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,324 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.main {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  background-color: #F5F6FA;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.leftsidebar {
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: self-start;
+  background-color: white;
+  width: 18%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.logo {
+  font-size: 3rem;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  margin-bottom: 40px;
 }
+
+.options {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-bottom: 60px;
+}
+
+.options h3 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.options ul {
+  list-style: none;
+}
+
+.options ul li {
+  font-size: 1.8rem;
+  display: flex;
+  font-weight: 500;
+  /* justify-content: center; */
+  align-items: center;
+  padding-left: 1.3rem;
+  color: grey;
+  /* margin-bottom: 10px; */
+  height: 5.5rem;
+  width: 15vw;
+  padding: 2rem;
+}
+
+.options ul li:hover {
+  cursor: pointer;
+  background: #3171ea;
+  border-radius: 20px;
+  color: white;
+}
+
+.rightsidebar {
+  padding-top: 10px;
+  justify-content: center;
+  display: block;
+  flex-direction: column;
+  background-color: white;
+  width: 18%;
+}
+
+.topleft {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 20px;
+  margin-bottom: 40px;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.info h1 {
+  padding-top: 10px;
+  font-weight: 500;
+  font-size: 3rem;
+}
+
+.info p {
+  font-size: 1.5rem;
+  color: grey;
+}
+
+.recentfollowers {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  margin-left: 50px;
+
+  justify-content: center;
+}
+.recentfollowers h1 {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.recentfollows {
+  margin-top: 30px;
+  display: flex;
+  margin-left: 50px;
+
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+.recentfollows h1 {
+  font-weight: 600;
+  font-size: 1.8rem;
+}
+
+.usercard {
+  background-color: rgb(218, 236, 253);
+  border-radius: 20px;
+  margin-right: 30px;
+  padding-left: 20px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex: row;
+  margin-bottom: 20px;
+}
+
+.usercard h1 {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.usercard p {
+  font-size: 1.4rem;
+  padding-bottom: 10px;
+}
+.usercard .info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 20px;
+}
+.content {
+  width: 64%;
+}
+
+/* dashboard styling */
+.dashboardtop {
+  display: flex;
+  flex-direction: column;
+}
+
+.dashandsearch {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: ; */
+  margin-bottom: 30px;
+}
+
+.dash {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-right: 30px;
+  width: 100%;
+}
+
+.dash h1 {
+  font-size: 2.3rem;
+  font-weight: 600;
+}
+
+.dash p {
+  font-size: 1.6rem;
+  color: grey;
+  font-weight: 500;
+}
+
+.search {
+  margin-top: 20px;
+  display: inline;
+  flex-direction: row;
+  margin-left: 30px;
+  margin-right: 30px;
+  width: 100%;
+}
+
+.search input {
+  margin-top: 5px;
+  width: 80%;
+  height: 65px;
+  border-radius: 25px;
+  border: none;
+  padding-left: 20px;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-right: 5px;
+}
+
+
+.analytics {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 25px;
+}
+
+.analyticcard {
+  background-color: white;
+  border-radius: 30px;
+  width: 400px;
+  justify-content: center;
+  align-self: center;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+}
+
+.analyticcard .left {
+
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: 50%;
+}
+
+.analyticcard .left .heading {
+  font-size: 35px;
+  font-weight: 200;
+}
+
+.analyticcard .left .data {
+  font-size: 50px;
+  font-weight: 400;
+}
+.circle1 {
+  margin-top: 20px;
+	border: 10px solid #55B58F;
+	border-radius: 50%;
+	width: 150px;
+	height: 150px;
+	z-index: 86;
+}
+
+.circle2 {
+  margin-top: 20px;
+	border: 10px solid #DFAA35;
+	border-radius: 50%;
+	width: 150px;
+	height: 150px;
+	z-index: 86;
+}
+
+.circle3 {
+  margin-top: 20px;
+	border: 10px solid #D85A41;
+	border-radius: 50%;
+	width: 150px;
+	height: 150px;
+	z-index: 86;
+}
+.circle.filled {
+	background-color: #666666;
+}
+
+.content {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-right: 30px;
+
+}
+
+/* activity feed */
+.activityfeed {
+  padding: 20px;
+  border-radius: 25px;
+  background-color: white;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.activityfeed h1 {
+  font-size: 2rem;
+}
+
+.feed {
+  justify-content: center;
+  padding: 10px;
+  align-items: center;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.feed .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
+
